--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.kpp7/com.example.kpp7.HelloApplication</mainClass>
+              <mainClass>com.example.kpp7/com.example.kpp7.MainViewApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
